# ultimate-compression-benchmark

./: LICENSE.md  README.md  pyproject.toml
benchmark/: __main__.py  benchmark.py  data.py  plot.py  results.py  tools.py
results/: report.md  report.txt
