[tool.poetry]
name = "ultimate-compression-benchmark"
version = "0.1.0"
description = "Benchmark of different compression algorithms"
authors = ["Denis Gruzdev <codingjerk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.9"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
